examples/network-performance/base-yamls/iperf3-server-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf3-server
  namespace: loadtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iperf3-server
  template:
    metadata:
      labels:
        app: iperf3-server
    spec:
      containers:
      - name: iperf3
        image: networkstatic/iperf3:latest
        args: ["-s"]
        ports:
        - containerPort: 5201
