examples/network-performance/base-yamls/fortio-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio-server
  namespace: loadtest
spec:
  selector:
    app: fortio-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: grpc
    port: 8079
    targetPort: 8079
  type: ClusterIP
