examples/network-performance/base-yamls/iperf3-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf3-server
  namespace: loadtest
spec:
  selector:
    app: iperf3-server
  ports:
  - name: iperf3
    port: 5201
    targetPort: 5201
  type: ClusterIP
