examples/network-performance/base-yamls/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: echo-app
spec:
  host: echo-app
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
      localityLbSetting:
        enabled: true
        # Either failover or distribute can be set
        # failover:
        #   - from: os-scinet-zone-1
        #     to: os-vaughan-zone-1
        #   - from: os-vaughan-zone-1
        #     to: os-scinet-zone-1
        # distribute:
        #   - from: "os-scinet-zone-1/os-scinet-zone-1/*"
        #     to:
        #       "os-scinet-zone-1/os-scinet-zone-1/*": 100
        #   - from: "os-vaughan-zone-1/os-vaughan-zone-1/*"
        #     to:
        #       "os-vaughan-zone-1/os-vaughan-zone-1/*": 100
        failoverPriority: 
          - os-scinet-zone-1
          - os-vaughan-zone-1
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 20s
      maxEjectionPercent: 50
